=== For Starsector 0.97a ===

- 0.3.0:
feat: improve gate marker icon. All credits and many thanks to Tesser for providing the new icon sprite!
feat: Fleets now get a hexagon instead of a circle for mnemonic sensors to make it easier to tell fleets apart from other stuff.
fix: Issue where the grid removal feature would interfere with some other mods setting backgrounds, even when disabled
feat: additional settings for mnemonic sensors


- 0.2.0:
feat: added option to force enable gate travel for the player, allowing you to skip the main quest.
I know this has already been implemented in other mods, but it is easy enough to implement and kind of fits the mod.

- 0.1.3:
fix: gate markers now get re-applied after saving without changing maps
feat: changed settings now apply instantly without saving

- 0.1.2:
fix: Issue where saving the game disabled many features
fix: Issue where system map grid removal was irreversible
feat: saving the game now applies settings

- 0.1.1: initial release, containing four features. All features can be disabled via LunaSettings

Mnemonic Sensors: Mark known sensor readings to prevent you from chasing your own cargo pods
Gate Markers: Mark systems with gates on the Star Map once you have unlocked gate travel
Trash Disposal: Automatically remove low-value items from loot screen (if your cargo is almost full). Cf. LunaSettings for details
Grid-less System Maps: Remove the grid from system maps for a more beautiful exploration experience. Code and idea contributed by Genir, many thanks and all credits to him!


Note:

This mod was previously called MnemonicSensors. However, since that mod was abandoned and the mnemonic sensor functionality
is only one part of this mod, I have decided to repurpose this repository for the MnemonicUtils mod.