@@ -24,7 +24,7 @@ val modFolderName = modName.replace(" ", "-")
 /** Set below to `true` to automatically create mod_info.json and Version Checker files. */
 val shouldAutomaticallyCreateMetadataFiles = true
 // Then, if above is set to true, update the rest of the information below in SECTION B.
-val modVersion = "0.2.0"
+val modVersion = "0.3.0"
 val jarFileName = "${modName.replace(" ", "-")}.jar"
 val modId = "dp_mnemonic_utils"
 val modAuthor = "DesperatePeter"
