@@ -6,9 +6,9 @@
     "modVersion":
     {
         "major":0,
-        "minor":2,
+        "minor":3,
         "patch":0
     },
-    "directDownloadURL": "https://github.com/DesperatePeter/mnemonic-sensors/releases/download/0.2.0/MnemonicUtils-0.2.0.zip",
+    "directDownloadURL": "https://github.com/DesperatePeter/mnemonic-sensors/releases/download/0.3.0/MnemonicUtils-0.3.0.zip",
     "changelogURL": "https://raw.githubusercontent.com/DesperatePeter/mnemonic-sensors/master/changelog.txt"
 }
